# basicCMake

./: CMakeLists.txt
